hphp/test/zend/bad/ext/standard/tests/strings/htmlentities14.php
<?php
	print ini_get('default_charset')."\n";
	var_dump(htmlentities("\x81\x41\x81\x42\x81\x43", ENT_QUOTES, ''));
?>